--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,17 +14,43 @@ jobs:
         uses: actions/checkout@v5
         with:
           token: ${{ secrets.PAT }} #此处PAT需要申请，教程详见：README
+
+      - name: Check last run (skip if ran within 12 hours)
+        id: check_last_run
+        run: |
+          LAST_FILE=".github/last_run.txt"
+          # default: proceed
+          if [ -f "$LAST_FILE" ]; then
+            last_epoch=$(cat "$LAST_FILE" 2>/dev/null || echo "")
+            if ! [[ "$last_epoch" =~ ^[0-9]+$ ]]; then
+              echo "Invalid or empty timestamp in $LAST_FILE, proceeding."
+              echo "should_run=true" >> $GITHUB_OUTPUT
+              exit 0
+            fi
+            now_epoch=$(date -u +%s)
+            diff=$(( now_epoch - last_epoch ))
+            if [ "$diff" -lt $((12*3600)) ]; then
+              echo "Last run was $diff seconds ago (<12 hours). Skipping remaining steps."
+              echo "should_run=false" >> $GITHUB_OUTPUT
+              exit 0
+            fi
+          fi
+          echo "should_run=true" >> $GITHUB_OUTPUT
+
       - name: Update system and install zsh
+        if: steps.check_last_run.outputs.should_run == 'true'
         run: |
           sudo -E apt-get -qq update
           sudo -E apt-get install zsh -y
           
       - name: 初始化Python
+        if: steps.check_last_run.outputs.should_run == 'true'
         uses: actions/setup-python@v6
         with:
           python-version: "3.10"
           
       - name: 开始
+        if: steps.check_last_run.outputs.should_run == 'true'
         env:
             CONFIG: ${{ secrets.CONFIG }}
             AES_KEY: ${{ secrets.AES_KEY }}
@@ -32,10 +58,14 @@ jobs:
           pip3 install requests pytz pycryptodome
           python3 main.py
 
-      - name: persist tokens
+      - name: persist tokens and update last run timestamp
+        if: steps.check_last_run.outputs.should_run == 'true'
         run: |
+          # update last run timestamp (epoch seconds) so next workflow can check
+          mkdir -p "$(dirname .github/last_run.txt)"
+          date -u +%s > .github/last_run.txt
           git config user.name github-actions
           git config user.email github-actions@users.noreply.github.com
           git add .
-          git commit -m "persist tokens trigger by ${{ github.event_name }}"
+          git commit -m "persist tokens and last_run trigger by ${{ github.event_name }}" || echo "nothing to commit"
           git push origin master
